# ar7-ch5-ensemble

./: .gitignore  .readthedocs.yaml  README.md  ar7-ch5-ensemble-brief.md  infilling_db_cmip7_scenariomip_20566343.csv  jupytext.toml  mkdocs.yml  pixi.toml  pyproject.toml  sci-running.ipynb
.github/workflows/: ci.yml  docs.yml
docs/: archetypes_port_brief.md  conventions.md  data_setup.md  engine_upstream_switch.md  harmonisation_open_questions.md  index.md  installation.md  methods.md  running_on_nac.md
docs/pipeline/: archetypes.md  (+3 more)
notebooks/: README.md  fig01_classification.py  fig03_classification_per_scm.py  fig04_ssp2com_validation.py  fig05_scenariomip_extensions.py  fig06_per_scm_grid.py  fig07_archetypes.py  harmonisation_demo.py
schemes/: README.md  clustered.json  figures.yaml  style.yaml
scripts/: build_rcmip3_bundle_augmented.py  cache_status.py  classify.py  compute_archetypes.py  harmonise.py  make_figures.py  preprocess_sci.py  preprocess_ssp2com.py  run_scenarios.py  validate_sci_vs_shipped.py  validate_ssp2com_vs_charlie.py
tests/: conftest.py  test_archetype_features.py  test_archetypes.py  test_cache.py  test_ciceroscm_distribution_resolver.py  test_classification_regression.py  test_clustering.py  test_figures.py  test_gw_scheme.py  test_harmonisation.py  test_harmonise.py  test_load_rcmip3.py  test_load_scenariomip.py  test_load_ssp2com.py  test_metrics_smoke.py  test_package.py  test_rcmip3_experiment.py  test_rcmip3_naming.py  test_runners_smoke.py  test_scenariomip_experiment.py  test_ssp2com_experiment.py  test_vetted_sci_pathways.py
(+43 files in other folders)
